# tools-config

./: .gitignore  README.md  gitconfig  pyproject.toml  software.md  vimrc  vscode.json
bash/: .bashrc  bashrc
clang-format/: .clang-format
cmake/: CMakeLists.txt  make.sh
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  run.sh
docker/dev/: .env  Dockerfile  compose.yaml  compose_gitlab.yaml  compose_server.yaml
docker/play/: .env  compose.yaml
git/: .gitconfig  docker-compose.yml  gitconfig
gitbook/: .env  Dockerfile  docker-compose.yml  entrypoint.sh
gitbook/config/: book.json
python/: ruff.toml
script/: loop-git.py  merge_pdf.py  rename.py  yaml_config_merger.py
tabby/: config.yaml
vim/: .vimrc  vimrc
vscode/: settings.json
zsh/: .zshrc
